--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "lash-master",
   "version": "1.0.0",
   "description": "Сайт мастера ламинирования ресниц",
-  "main": "server.js",
+  "main": "server/server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "node server.js"
+    "start": "node server/server.js",
+    "dev": "node server/server.js"
   },
   "dependencies": {
     "express": "^4.18.2",
